# rpi-gardener

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README  README.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.yml  gardener.service  polling.service  pyproject.toml  requirements-dev.txt  requirements-mp.txt  requirements-server.txt  requirements.txt  sensor.py  server.py  server.service  start.sh
.github/workflows/: test.yml
docker/: crontab  entrypoint.sh  pico-sync.sh  supervisord.conf  tailscale-cert-renew.sh
docker/nginx/: nginx.conf  rpi-dev.conf  rpi-ssl.conf
hardware/case/: rpi-gardener-display-plate.scad
hardware/kicad/: rpi-gardener-hat.kicad_sch
hardware/pcb/: README.md
hardware/pcb/case/: rpi-gardener-base.scad  rpi-gardener-base.stl  rpi-gardener-display-plate.stl
hardware/pcb/kicad/: rpi-gardener-hat.kicad_pro
micropython/: README  main.py
nginx/: nginx.conf
nginx/sites-enabled/: rpi.conf
pcb/: BOM.txt  LICENSE  README.md  rpi-gardener-base.scad  rpi-gardener-base.stl  rpi-gardener-display-plate.scad  rpi-gardener-display-plate.stl  rpi-gardener-hat.kicad_pcb  rpi-gardener-hat.kicad_prl  ~rpi-gardener-hat.kicad_pcb.lck
pcb/case/: rpi-gardener-display-plate.scad  rpi-gardener-display-plate.stl
pcb/kicad/: rpi-gardener-hat.kicad_pcb  rpi-gardener-hat.kicad_prl
pcb/pihat-schematic-master/: .gitignore  README.md  pihat.kicad_pcb  pihat.pro  pihat.sch
pcb/pihat-schematic-master/meta/: info.html
pcb/rpi-gardener-hat.pretty/: RPi_Pico_SMD_TH.kicad_mod
pico/: README.md  main.py
rpi/: README.md  __init__.py  _display.py  _events.py  _worker.py  db_cleanup.py  logging.py
rpi/api/: pico.py
rpi/cron/: __init__.py  db_cleanup.py
rpi/dht/: __main__.py  _display.py  _notifications.py  _worker.py  audit.py  display.py  models.py  polling.py  service.py
rpi/display/: __init__.py
rpi/humidifier/: __init__.py  __main__.py  service.py
rpi/lcd/: __main__.py  display.py  service.py
rpi/lib/: alerts.py  config.py  db.py  eventbus.py  events.py  exceptions.py  mock.py  notifications.py  params.py  polling.py  reading.py  retry.py  service.py  smartplug.py  utils.py
rpi/lib/config/: __init__.py  constants.py  enums.py  settings.py  testing.py  thresholds.py
rpi/lib/db/: __init__.py  admin.py  connection.py  queries.py  settings.py  types.py
rpi/lib/sql/: dht_chart.sql  dht_latest_recording.sql  dht_stats.sql  idx_pico_reading.sql  idx_reading.sql  init_admin_table.sql  init_pico_reading_table.sql  init_reading_table.sql  init_settings_table.sql  pico_chart.sql  pico_latest_recording.sql
rpi/notifications/: __init__.py  __main__.py  service.py
rpi/oled/: __main__.py  display.py  service.py
rpi/pico/: __main__.py  models.py  polling.py  reader.py
rpi/server/: __init__.py  __main__.py  auth.py  entrypoint.py  spa.py  sse.py  validators.py  websockets.py
rpi/server/api/: __init__.py  admin.py  dashboard.py  health.py  pico.py  thresholds.py
rpi/server/frontend/: biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
rpi/server/frontend/src/: App.tsx  types.ts
rpi/server/templates/: base.html  index.html
rpi/server/views/: __init__.py  _queries.py  _utils.py  _websockets.py  dashboard.py  spa.py
rpi/smartplug/: __init__.py  __main__.py  service.py
rpi/sql/: latest_recording.sql
rpi/templates/: alert_email.html
scripts/: entrypoint.sh  seed_data.py
src/: _config.py  _db.py  _display.py  _events.py  _notifications.py  _reading.py  _utils.py  _worker.py  lib.py  listener.py  polling.py  server.py
src/api/: __init__.py
src/sql/: average.sql  chart.sql  feed_table.sql  init_pico_reading_table.sql  init_table.sql  init_tables.sql  stats.sql
src/static/js/: charts.js  websocket.js
src/templates/: base.html  index.html  index.j2
tests/: conftest.py  test_auth.py  test_config.py  test_connection_pool.py  test_dashboard_api.py  test_db_cleanup.py  test_dht_audit.py  test_dht_polling.py  test_dht_service.py  test_eventbus.py  test_health_api.py  test_lcd_service.py  test_notifications.py  test_oled_service.py  test_pico_reader.py  test_settings_api.py  test_settings_cache.py  test_smartplug.py  test_sse.py  test_validators.py  test_websockets.py
(+35 files in other folders)
