[project]
name = "rpi-gardener"
version = "0.1.0"
description = "Raspberry Pi gardening monitor"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "sqlitey",
    "starlette",
    "uvicorn[standard]",
]

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-dht",
    "adafruit-circuitpython-ssd1306",
    "pillow",
    "aioserial",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "isort",
]
micropython = [
    "mpremote",
    "rshell",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rpi"]
